# rust-workspace-101

./: Cargo.toml  Makefile  README.md
project1/: Cargo.toml
project1/src/: main.rs
project2/: Cargo.toml
project2/src/: main.rs
